SubVersion: $Id$

To do:
	- video scaling
	- link port is broken (HW2 only ?!)
	- stealth I/O and mem protect (done but not enabled)
	
- 19/03/2005, version 1.80q:
	- [roms]  $985: updated copyright notice.
	- [roms]  $990: set main window title (for TIGCC-IDE).
	- [roms]  $993: switched to GTK+ 2.6.4 for Windows.

- 12/03/2005, version 1.80p:
	- [kevin] $933: increased link timeout from 1.5 to 10s.
	- [kevin] $934: fixed grayscale support.
	- [kevin] $935: fixed grayscale support with double buffering.
	- [kevin] $937: allow building with -mwindows -D_WINDOWS on MinGW.
	- [roms]  $940: removed mutex at startup because we should be able to run 
		2 instances of TiEmu for virtual linking.
	- [roms]  $941: fixed ghost of RAM in $100000 on TI89,92,92+,V200.
	- [roms]  $943: fixed ghost of RAM in $000000 on Tinanium
	- [roms]  $949: fixed timer incrementing/reloading (PPhd: loop freeze)
	- [roms]  $950: can send all of 89?, 92?, 9x? and v2? to all the models
	- [roms]  $951: clean-up in ti68k_scan_images (no more cache, useless now)
	- [roms]  $952: can remove (=file delete) image from list
	- [roms]  $954: fixed size for archived handles on PedRom
	- [roms]  $958: fixed file pattern for Win32 file selector; fixed default 
					path and pattern for the new GTK file selector.
	- [roms]  $960: improved management of ALPHA key on TI89 (letter/number).
	- [roms]  $962: factorized TI89/V200 & TI92+ code (memory).
	- [kevin] $966: added KDE file selector support.
	- [roms]  $976: full hw1/2/3 protection support (89).
	- [roms]  $980: overhaul of some parts in memory management and factorized 
					hw protection code for all calcs.
	- [roms]  $981: hw protection implemented for all calc models.

- 25/02/2005, version 1.80o: roms
	- fixed bug in ti68k_get_hw_param_block (wrong search/replace)
	- fixed TAB char (0x09) pb in the dbg_mem window (Lionel)
	- handles are now displayed fine with PedRom
	- program entry breakpoint feature now useable with AMS >= 2.00