@@ -15,12 +15,9 @@ gchar *s = N_("Range");
 gchar *s = N_("to");
 gchar *s = N_("at");
 gchar *s = N_("0x000000");
-gchar *s = N_("*");
 gchar *s = N_("0x000000");
-gchar *s = N_("*");
+gchar *s = N_("0x000000");
 gchar *s = N_("Byte");
 gchar *s = N_("Word");
 gchar *s = N_("Long");
-gchar *s = N_("0x000000");
-gchar *s = N_("*");
 gchar *s = N_("Type");
