@@ -9,6 +9,7 @@ To do:
 	- [roms]  $985: updated copyright notice.
 	- [roms]  $990: set main window title (for TIGCC-IDE).
 	- [roms]  $993: switched to GTK+ 2.6.4 for Windows.
+	- [roms]  $994: removed GTK deprecated code (-DGTK_DISABLE_DEPRECATED), except for comm.c
 
 - 12/03/2005, version 1.80p:
 	- [kevin] $933: increased link timeout from 1.5 to 10s.
